Add menu navigation

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -3,8 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>ScienceDev</title>
+    <link rel = "stylesheet" type = "text/css" href = "./mainOneStyle.css"/>
 </head>
 <body>
+
+<div id = "mainBox">
+    <div id = "menuBox">
+        <p class = "listElementMenu" id = "www_1">Проект</p>
+        <p class = "listMenuContent" id = "qqq_1" hidden>
+            <button class = "btn">Сохранить проект</button>
+        </p>
+
+        <p class = "listElementMenu" id = "www_2">Выбрать страницу</p>
+        <p class = "listMenuContent" id = "qqq_2" hidden>
+            Название страницы
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            <button class = "btn">Выбрать</button>
+        </p>
+
+        <p class = "listElementMenu" id = "www_3">Свойства страницы</p>
+        <p class = "listMenuContent" id = "qqq_3" hidden>
+            Ширина
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            Высота
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            Цвет фона
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            <button class = "btn">Применить</button>
+        </p>
+
+        <p class = "listElementMenu" id = "www_4">Создать элемент</p>
+        <p class = "listMenuContent" id = "qqq_4" hidden>
+            <button class = "btn" style="width:240px;">Текст</button>
+            <br>
+            <button class = "btn" style="width:240px;">Изображение</button>
+            <br>
+            <button class = "btn" style="width:240px;">Ролик</button>
+        </p>
+
+        <p class = "listElementMenu" id = "www_5">Удалить элемент</p>
+        <p class = "listMenuContent" id = "qqq_5" hidden>
+            ID элемента
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            <button class = "btn">Удалить</button>
+        </p>
+
+        <p class = "listElementMenu" id = "www_6">Свойства элемента</p>
+        <p class = "listMenuContent" id = "qqq_6" hidden>
+            Позиция X
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            Позиция Y
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            Ширина
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            Высота
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <br>
+            <button class = "btn">Применить</button>
+        </p>
+    </div>
+</div>
 
 <script src = "./scripts/ANSWERSAITMAKER.js"></script>
 
