--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -8,6 +8,8 @@
 <body>
 
 <div id = "mainBox">
+    <div id = "pageContent"></div>
+
     <div id = "menuBox">
         <p class = "listElementMenu" id = "www_1">Проект</p>
         <p class = "listMenuContent" id = "qqq_1" hidden>
@@ -25,14 +27,6 @@
 
         <p class = "listElementMenu" id = "www_3">Свойства страницы</p>
         <p class = "listMenuContent" id = "qqq_3" hidden>
-            Ширина
-            <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
-            <br>
-            Высота
-            <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
-            <br>
             Цвет фона
             <br>
             <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
@@ -47,6 +41,10 @@
             <button class = "btn" style="width:240px;">Изображение</button>
             <br>
             <button class = "btn" style="width:240px;">Ролик</button>
+            <br>
+            <button class = "btn" style="width:240px;">Кнопка</button>
+            <br>
+            <button class = "btn" style="width:240px;">Поле ввода</button>
         </p>
 
         <p class = "listElementMenu" id = "www_5">Удалить элемент</p>
