Add creating, loading pages and their fon

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -20,18 +20,18 @@
         <p class = "listMenuContent" id = "qqq_2" hidden>
             Название страницы
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "pageNameField" value = "page_first">
             <br>
-            <button class = "btn">Выбрать</button>
+            <button class = "btn" id = "choosePageBtn">Выбрать</button>
         </p>
 
         <p class = "listElementMenu" id = "www_3">Свойства страницы</p>
         <p class = "listMenuContent" id = "qqq_3" hidden>
             Цвет фона
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "fonColorField" value = "">
             <br>
-            <button class = "btn">Применить</button>
+            <button class = "btn" id = "chooseFonColorBtn">Применить</button>
         </p>
 
         <p class = "listElementMenu" id = "www_4">Создать элемент</p>
