Add events to CREATE buttons

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -36,15 +36,15 @@
 
         <p class = "listElementMenu" id = "www_4">Создать элемент</p>
         <p class = "listMenuContent" id = "qqq_4" hidden>
-            <button class = "btn" style="width:240px;">Текст</button>
+            <button class = "btn" id = "createTextBtn" style="width:240px;">Текст</button>
             <br>
-            <button class = "btn" style="width:240px;">Изображение</button>
+            <button class = "btn" id = "createImageBtn" style="width:240px;">Изображение</button>
             <br>
-            <button class = "btn" style="width:240px;">Ролик</button>
+            <button class = "btn" id = "createRolicBtn" style="width:240px;">Ролик</button>
             <br>
-            <button class = "btn" style="width:240px;">Кнопка</button>
+            <button class = "btn" id = "createButtonBtn" style="width:240px;">Кнопка</button>
             <br>
-            <button class = "btn" style="width:240px;">Поле ввода</button>
+            <button class = "btn" id = "createInputFieldBtn" style="width:240px;">Поле ввода</button>
         </p>
 
         <p class = "listElementMenu" id = "www_5">Удалить элемент</p>
