Add creating objects

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -60,19 +60,19 @@
         <p class = "listMenuContent" id = "qqq_6" hidden>
             Позиция X
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "posXfield" value = "">
             <br>
             Позиция Y
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "posYfield" value = "">
             <br>
             Ширина
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "sizeWfield" value = "">
             <br>
             Высота
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "sizeHfield" value = "">
             <br>
             <button class = "btn">Применить</button>
         </p>
