Add objects working OK

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -57,7 +57,7 @@
         </p>
 
         <p class = "listElementMenu" id = "www_6">Свойства элемента</p>
-        <p class = "listMenuContent" id = "qqq_6" hidden>
+        <p class = "listMenuContent" id = "qqq_6" hidden style = "overflow-y: auto; height: 450px;">
             Позиция X
             <br>
             <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "posXfield" value = "">
@@ -74,7 +74,23 @@
             <br>
             <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "sizeHfield" value = "">
             <br>
-            <button class = "btn">Применить</button>
+            Содержимое текста
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "TEXTcontentField" value = "">
+            <br>
+            Размер текста
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "TEXTsizeField" value = "">
+            <br>
+            Цвет текста
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "TEXTtextcolorFIELD" value = "">
+            <br>
+            Задний фон
+            <br>
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "TEXTbackgroundFIELD" value = "">
+            <br>
+            <button class = "btn" id = "elementsPropertiesOK">Применить</button>
         </p>
     </div>
 </div>
