--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -47,7 +47,7 @@
             <button class = "btn" id = "createInputFieldBtn" style="width:240px;">Поле ввода</button>
         </p>
 
-        <p class = "listElementMenu" id = "www_5">Удалить элемент</p>
+        <p class = "listElementMenu" id = "www_5" hidden>Удалить элемент</p>
         <p class = "listMenuContent" id = "qqq_5" hidden>
             ID элемента
             <br>
@@ -56,7 +56,7 @@
             <button class = "btn">Удалить</button>
         </p>
 
-        <p class = "listElementMenu" id = "www_6">Свойства элемента</p>
+        <p class = "listElementMenu" id = "www_6" hidden>Свойства элемента</p>
         <p class = "listMenuContent" id = "qqq_6" hidden style = "overflow-y: auto; height: 450px;">
             Позиция X
             <br>
