Add loading images

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -90,10 +90,17 @@
             <br>
             <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "TEXTbackgroundFIELD" value = "">
             <br>
+            <input type = "file" id = "changeFileImageBtn" hidden>
+            <button class = "btn" id = "chooseImageBtn">Выбрать изображение</button>
+            <br>
             <button class = "btn" id = "elementsPropertiesOK">Применить</button>
         </p>
     </div>
 </div>
+
+<script>
+    console.log("Created by Kolotovkin Maxim");
+</script>
 
 <script src = "./scripts/ANSWERSAITMAKER.js"></script>
 
