--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -56,6 +56,10 @@
 
         <p class = "listElementMenu" id = "www_6" hidden>Свойства элемента</p>
         <p class = "listMenuContent" id = "qqq_6" hidden style = "overflow-y: auto; height: 450px;">
+            <br>
+            <b id = "labelIDofElement" style = "color: #00FF00; font-size: 30px;"></b>
+            <br>
+            <br>
             Позиция X
             <br>
             <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "posXfield" value = "">
