Add deleting of objects

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -49,9 +49,9 @@
         <p class = "listMenuContent" id = "qqq_5" hidden>
             ID элемента
             <br>
-            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" value = "">
+            <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "deleteElementField" value = "">
             <br>
-            <button class = "btn">Удалить</button>
+            <button class = "btn" id = "dropElementFromObjBtn">Удалить</button>
         </p>
 
         <p class = "listElementMenu" id = "www_6" hidden>Свойства элемента</p>
