Working with rolic OK

--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -109,6 +109,13 @@
                 <br>
             </span>
 
+            <span id = "rolixPropSelectBox">
+                Имя ролика
+                <br>
+                <input type = "text" spellcheck = 'false' autocomplete = 'off' class = "textField" id = "rolixInputField" value = "">
+                <br>
+            </span>
+
             <button class = "btn" id = "elementsPropertiesOK">Применить</button>
         </p>
     </div>
