--- a/static/sitemaker.html
+++ b/static/sitemaker.html
@@ -11,7 +11,7 @@
     <div id = "menuBox">
         <p class = "listElementMenu" id = "www_1">Проект</p>
         <p class = "listMenuContent" id = "qqq_1" hidden>
-            <button class = "btn">Сохранить проект</button>
+            <button class = "btn" style = "width: 230px;" id = "saveAndWatchProjectBtn">Сохранение и просмотр проекта</button>
         </p>
 
         <p class = "listElementMenu" id = "www_2">Выбрать страницу</p>
